--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="bet" onclick="showbet()"><h1>Maior casa de apostas!!!!</h1></button>
+    <h1 class="titulo">Fique rico apenas apostando com a Bet365.</h1>
+
     <script src="main.js"></script>
 </body>
 </html>
